--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,10 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
-  <!-- Todo: put here your site title -->
+
   <title>Howard Li Chun Wai | Developer</title>
-  <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
-  <meta name="keywords" content="[username], [name], skill" />
+  <meta name="keywords" content="[Li Chun Wai], Developer , React , .NET" />
   <!-- Todo: improve your SEO by adding a small description of you -->
   <meta name="description" content="Howard Li Chun Wai | Developer" />
 
@@ -71,10 +69,10 @@
       </div>
       <h2 class="section-title load-hidden">Skill</h2>
       <div class="row about-wrapper">
-        <div class="col-md-3 col-sm-12">
+        <div class="col-md-2 col-sm-12">
 
         </div>
-        <div class="col-md-3 col-sm-12">
+        <div class="col-md-2 col-sm-12">
           <div class="about-wrapper__info load-hidden">
             <p class="about-wrapper__info-text">
             <h3><b>Frontend</b></h3>
@@ -84,31 +82,50 @@
                 <dt>React</dt>
                 <dd>Hook , Context , Ref</dd>
                 <dt>Vue</dt>
-                <dd>Hook , Context , Ref</dd>
+                <dt>jQuery</dt>
                 <dt>Bootstrap</dt>
-                <dd>v3.1 , v5.1</dd>
+                <dt>HTML</dt>
+                <dt>CSS</dt>
+                <dt>SweetAlert2</dt>
               </dl>
             </p>
           </div>
         </div>
-        <div class="col-md-3 col-sm-12 text-center">
+        <div class="col-md-4 col-sm-12 text-center">
           <div class="about-wrapper__info load-hidden">
             <p class="about-wrapper__info-text">
             <h3><b>Backend</b></h3>
             </p>
             <p class="about-wrapper__info-text">
               <dl>
-                <dt>React</dt>
-                <dd>Hook , Context , Ref</dd>
-                <dt>Vue</dt>
-                <dd>Hook , Context , Ref</dd>
-                <dt>Bootstrap</dt>
-                <dd>v3.1 , v5.1</dd>
+                <dt>.NET Framework</dt>
+                <dd>ASP.NET MVC, ASP.NET WebForm , WinForm , WPF , Web API , SignalR </dd>
+                <dt>.NET Core</dt>
+                <dd>Entity Framework Core , CQRS With MediatR , Dapper , Automapper</dd>
+                <dt>C#</dt>
+                <dt>Java</dt>
               </dl>
             </p>
           </div>
         </div>
-        <div class="col-md-3 col-sm-12">
+        <div class="col-md-2 col-sm-12 text-center">
+          <div class="about-wrapper__info load-hidden">
+            <p class="about-wrapper__info-text">
+            <h3><b>IT related knowledge</b></h3>
+            </p>
+            <p class="about-wrapper__info-text">
+              <dl>
+                <dt>SQL</dt>
+                <dd>MS sql Server , MS Access , MongoDB</dd>
+                <dt>Operating System</dt>
+                <dd>Windows , Linux</dd>
+                <dt>Coould</dt>
+                <dd>Aurze , Google Cloud Platform</dd>
+              </dl>
+            </p>
+          </div>
+        </div>
+        <div class="col-md-2 col-sm-12">
 
         </div>
       </div>
