--- a/src/index.html
+++ b/src/index.html
@@ -50,11 +50,12 @@
         <div class="col-md-6 col-sm-12 text-center">
           <div class="about-wrapper__info load-hidden">
             <p class="about-wrapper__info-text">
-              This is where you can describe about yourself. The more you
-              describe about yourself, the more chances you can!
+              A developer with two years experience in full stack web development and
+              desktop application. I am a responsible , ambitious and self motivated person. Willing to learn
+              new technology to solve problem or improve the performance of application.
             </p>
             <p class="about-wrapper__info-text">
-              Extra Information about you! like hobbies and your goals.
+              My goal is becoming a cloud developers in Microsoft Azure.
             </p>
             <span class="d-flex mt-3">
               <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="assets/resume.pdf">
